# aoc2022

./: 13.py  7.py  7_.py  8.py  Cargo.toml  da1.py  day5.py
src/: common.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_13.rs  shared.rs  takeuntil.rs
