[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
take-until = "0.1.0"

[[bin]]
name = "day1"
path = "src/day_01.rs"

[[bin]]
name = "day2"
path = "src/day_02.rs"

[[bin]]
name = "day3"
path = "src/day_03.rs"

[[bin]]
name = "day4"
path = "src/day_04.rs"

[[bin]]
name = "day6"
path = "src/day_06.rs"

[[bin]]
name = "day7"
path = "src/day_07.rs"

[[bin]]
name = "day8"
path = "src/day_08.rs"
